--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,5 @@ body {
 
     .main{
         background-color: white;
-        height: 1200px;
     }
 }
